FILE REORGANISATION: Added model namespaces and made various other adjustments.
git-svn-id: svn+ssh://rubyforge.org/var/svn/goldberg/trunk/goldberg/templates/vendor/plugins/goldberg@71 2112df0d-361b-0410-855b-e9e795e2bf81

--- a/app/views/goldberg/menu_items/_menubar.rhtml
+++ b/app/views/goldberg/menu_items/_menubar.rhtml
@@ -10,7 +10,7 @@ if session[:menu]
   <li<%= if selected then ' class="selected"' end %>>
     <a href="/menu/<%= item.name %>"><%= item.label %></a>
     <%= if selected and depth > 0 
-	  render :partial => 'menu_items/menubar', 
+	  render :partial => 'goldberg/menu_items/menubar', 
             :locals => {:level => level + 1, :depth => depth - 1,
 		        :class_attr => class_attr }
         end %>
