FILE REORGANISATION: Fixed various views, the default layout and stylesheets.  Added auto-detection for multiple controller paths.
git-svn-id: svn+ssh://rubyforge.org/var/svn/goldberg/trunk/goldberg/templates/vendor/plugins/goldberg@72 2112df0d-361b-0410-855b-e9e795e2bf81

--- a/app/views/goldberg/menu_items/_menubar.rhtml
+++ b/app/views/goldberg/menu_items/_menubar.rhtml
@@ -10,8 +10,7 @@ if session[:menu]
   <li<%= if selected then ' class="selected"' end %>>
     <a href="/menu/<%= item.name %>"><%= item.label %></a>
     <%= if selected and depth > 0 
-	  render :partial => 'goldberg/menu_items/menubar', 
-            :locals => {:level => level + 1, :depth => depth - 1,
+	  render :file => "#{RAILS_ROOT}/vendor/plugins/goldberg/app/views/goldberg/menu_items/_menubar.rhtml", :use_full_path => false, :locals => {:level => level + 1, :depth => depth - 1,
 		        :class_attr => class_attr }
         end %>
   </li>
