--- a/app/views/goldberg/menu_items/list.rhtml
+++ b/app/views/goldberg/menu_items/list.rhtml
@@ -7,7 +7,7 @@
 <td></td>
 <td></td>
 <td></td>
-<td><%= link_to image_tag("/images/add.png"), 
+<td><%= link_to image_tag("/goldberg/images/add.png"), 
 	{:action => 'new'} %></td>
 </tr>
 
