FILE REORGANISATION: Fixed all the layouts, the Suckerfish partial, and the generator to work with the new structure.
git-svn-id: svn+ssh://rubyforge.org/var/svn/goldberg/trunk/goldberg/templates/vendor/plugins/goldberg@73 2112df0d-361b-0410-855b-e9e795e2bf81

--- a/app/views/goldberg/menu_items/_suckerfish.rhtml
+++ b/app/views/goldberg/menu_items/_suckerfish.rhtml
@@ -7,8 +7,7 @@
     end %>><%= item.label %></a>
   <% if item.children -%>
 <ul>
-  <%= render :partial => 'menu_items/suckerfish', 
-      :locals => {:items => item.children} %>
+  <%= render :file => "#{RAILS_ROOT}/vendor/plugins/goldberg/app/views/goldberg/menu_items/_suckerfish.rhtml", :use_full_path => false, :locals => {:items => item.children} %>
 </ul>
   <% end -%>
 </li>
