Re-write of login/auth code, including changes to session storage; addition of accessors to Goldberg to get the current user and their credentials; and the centralisation of authentication and session-user management within the Auth controller.
git-svn-id: svn+ssh://rubyforge.org/var/svn/goldberg/trunk/goldberg/templates/vendor/plugins/goldberg@75 2112df0d-361b-0410-855b-e9e795e2bf81

--- a/app/views/goldberg/auth/_login.rhtml
+++ b/app/views/goldberg/auth/_login.rhtml
@@ -1,5 +1,5 @@
-<% if session[:user] -%>
-<p> User:&nbsp;<%= h(session[:user].name) %>
+<% if Goldberg.user -%>
+<p> User:&nbsp;<%= h(Goldberg.user.name) %>
 <%= start_form_tag :controller => 'goldberg/auth', :action => 'logout' %>
   <%= submit_tag "Logout" %>
 <%= end_form_tag %>
