--- a/app/views/goldberg/menu_items/_item_list.rhtml
+++ b/app/views/goldberg/menu_items/_item_list.rhtml
@@ -37,7 +37,7 @@ for item_id in items do
 <% end -%>
 </td>
 
-<td><%= if depth < (@settings.menu_depth - 1)
+<td><%= if depth < (Goldberg.settings.menu_depth - 1)
 	  link_to image_tag("/goldberg/images/add.png"), 
 	  {:action => 'new_for', :id => item.id} 
 	end %></td>
