--- a/app/views/goldberg/menu_items/_item_parent_list.rhtml
+++ b/app/views/goldberg/menu_items/_item_parent_list.rhtml
@@ -6,7 +6,7 @@
 <td> <div class="menu_title"><%= item.label %></div></td>
 </tr>
     <% if item.children and item.children.length > 0 and 
-       depth < (@settings.menu_depth - 2) -%>
+       depth < (Goldberg.settings.menu_depth - 2) -%>
       <%= render :partial => 'item_parent_list', :locals => {:items =>
         item.children, :depth => depth + 1} %>
     <% end -%>
