--- a/app/views/goldberg/menu_items/_menubar.rhtml
+++ b/app/views/goldberg/menu_items/_menubar.rhtml
@@ -1,12 +1,12 @@
 <% 
-if session[:menu]
-   menu = session[:menu].get_menu(level)
+if Goldberg.menu
+   menu = Goldberg.menu.get_menu(level)
    if menu
 %>
 <ul<%= if class_attr then " class=\"#{class_attr}\"" end%>>
   <% for item_id in menu do 
-       item = session[:menu].get_item(item_id)
-       selected = session[:menu].selected?(item.id)%>
+       item = Goldberg.menu.get_item(item_id)
+       selected = Goldberg.menu.selected?(item.id)%>
   <li<%= if selected then ' class="selected"' end %>>
     <a href="/menu/<%= item.name %>"><%= item.label %></a>
     <%= if selected and depth > 0 
