--- a/app/views/goldberg/users/show.rhtml
+++ b/app/views/goldberg/users/show.rhtml
@@ -1,25 +1,29 @@
-<h1>User: <%=h @user.name %></h1>
+<h1>User: <%= h @user.name %></h1>
 
 <table>
 
 <tr><th>Full Name:</th>
-<td><%= @user.fullname %></td>
+<td><%= h @user.fullname %></td>
 </tr>
 
 <tr><th>Email Address:</th>
-<td><%= @user.email %></td>
+<td><%= h @user.email %></td>
 </tr>
 
+<% if not @self_reg -%>
 <tr><th>Role:</th>
 <td><%= link_to @role.name, :controller => 'roles',
         :action => 'show', :id => @role.id %></td>
 </tr>
+<% end -%>
 
 </table>
 
 <hr/>
-<p><%= link_to 'Edit', :action => 'edit', :id => @user %> |
-<%= link_to 'Delete', {:action => 'destroy', :id => @user}, 
+<p><%= link_to 'Edit', :action => (@self_reg ? 'self_edit' : 'edit'), :id => @user %> 
+<% if not @self_reg -%>
+| <%= link_to 'Delete', {:action => 'destroy', :id => @user}, 
     :confirm => 'Delete this user?', :post => true %> </p>
 
 <p><%= link_to 'Back', :action => 'list' %> to Users list</p>
+<% end -%>
