--- a/app/views/goldberg/users/edit.rhtml
+++ b/app/views/goldberg/users/edit.rhtml
@@ -1,9 +1,9 @@
 <h1>Editing user</h1>
 
-<%= start_form_tag :action => 'update', :id => @user %>
+<% form_tag :action => (@self_reg ? 'self_update' : 'update'), :id => @user do %>
   <%= render :partial => 'form' %>
   <%= submit_tag 'Edit' %>
-<%= end_form_tag %>
+<% end -%>
 
 <%= link_to 'Show', :action => 'show', :id => @user %> |
 <%= link_to 'Back', :action => 'list' %>
