--- a/app/views/goldberg/users/new.rhtml
+++ b/app/views/goldberg/users/new.rhtml
@@ -1,8 +1,8 @@
 <h1>New user</h1>
 
-<%= start_form_tag :action => 'create' %>
+<% form_tag :action => (@self_reg ? 'self_create' : 'create') do %>
   <%= render :partial => 'form' %>
   <%= submit_tag "Create" %>
-<%= end_form_tag %>
+<% end %>
 
 <%= link_to 'Back', :action => 'list' %>
