Further changes to self-registration, including the facility for users to reset their passwords if forgotten.  Fixes to goldberg_filters.rb
git-svn-id: svn+ssh://rubyforge.org/var/svn/goldberg/trunk/goldberg/templates/vendor/plugins/goldberg@77 2112df0d-361b-0410-855b-e9e795e2bf81

--- a/app/views/goldberg/user_mailer/reset_password_request.rhtml
+++ b/app/views/goldberg/user_mailer/reset_password_request.rhtml
@@ -1,3 +1,23 @@
-UserMailer#renew_request
+<p><strong>THIS IS AN AUTOMATICALLY GENERATED EMAIL.  DO NOT REPLY.</strong></p>
 
-Find me in app/views/user_mailer/renew_request.rhtml
+
+<p>Dear <%= @name %>,</p>
+
+<p>You recently notified us that you had forgotten your password.
+This email is to verify that you really do want to have your password
+reset.</p>
+
+<p>Please go to the address below in your web browser to reset your
+password:</p>
+
+<p><a href="<%= @url_str %>"><%= @url_str %></a></p>
+
+<p>After that you will receive a separate email with your new
+password.</p>
+
+<p><em><strong>Note:</strong> If you did not request that your
+password be reset, please contact us immediately.</em></p>
+
+
+<p>Yours sincerely,<br/>
+<p>The Site Administrator</p>
