--- a/app/views/goldberg/users/_form.rhtml
+++ b/app/views/goldberg/users/_form.rhtml
@@ -3,7 +3,7 @@
 <table>
 
 <tr>
-<th>User ID/screen name </th>
+<th>Userid (screen name) </th>
 <td><%= text_field 'user', 'name'  %></td>
 </tr>
 
@@ -13,7 +13,7 @@
 </tr>
 
 <tr>
-<th> E-mail Address </th>
+<th> Email Address </th>
 <td><%= text_field 'user', 'email'  %></td>
 </tr>
 
