--- a/app/views/goldberg/content_pages/_form.rhtml
+++ b/app/views/goldberg/content_pages/_form.rhtml
@@ -15,11 +15,25 @@ Required</label><br/>
 <%= collection_select :content_page, :permission_id, 
       @permissions, :id, :name %></p>
 
-<p><label for="content_page_markup_style_id">Markup Style </label><br/>
-<%= collection_select :content_page, :markup_style_id,
-      @markup_styles, :id, :name %></p>
+<p>Markup Style<br/>
+<%= form.select :markup_style, @markup_styles %></p>
 
+<%= javascript_include_tag '/fckeditor/fckeditor.js' %>
+<script type="text/javascript">
+window.onload = function()
+{
+var oFCKeditor = new FCKeditor( 'content_text' ) ;
+oFCKeditor.Height = 500 ;
+oFCKeditor.Config['LinkBrowserURL'] = '/fckeditor/editor/filemanager/browser/default/browser.html?Connector=/goldberg/content_pages/fck_filemanager' ;
+oFCKeditor.Config['ImageBrowserURL'] = '/fckeditor/editor/filemanager/browser/default/browser.html?Type=Image&Connector=/goldberg/content_pages/fck_filemanager' ;
+oFCKeditor.Config['FlashBrowserURL'] = '/fckeditor/editor/filemanager/browser/default/browser.html?Type=Flash&Connector=/goldberg/content_pages/fck_filemanager' ;
+oFCKeditor.Config['SpellChecker'] = 'SpellerPages' ;
+oFCKeditor.Config['SpellerPagesServerScript'] = '/goldberg/content_pages/fck_speller_pages' ;
+oFCKeditor.ReplaceTextarea() ;
+}
+</script>
 <p><label for="content_page_content">Content</label><br/>
-<%= text_area 'content_page', 'content', :cols => 70, :rows => 25 %></p>
+<%= text_area 'content_page', 'content', :id => "content_text", :width => "100%", :height => "500" %>
+</p>
 
 <!--[eoform:content_page]-->
