--- a/app/views/goldberg/content_pages/edit.rhtml
+++ b/app/views/goldberg/content_pages/edit.rhtml
@@ -1,9 +1,10 @@
 <h1>Editing Content Page</h1>
 
-<%= start_form_tag :action => 'update', :id => @content_page %>
-  <%= render :partial => 'form' %>
+<% form_for :content_page, :url => {:action => 'update', 
+                                    :id => @content_page.id} do |form| %>
+  <%= render :partial => 'form', :locals => {:form => form} %>
   <%= submit_tag 'Edit' %>
-<%= end_form_tag %>
+<% end %>
 
 <%= link_to 'Show', :action => 'show', :id => @content_page %> |
 <%= link_to 'Back', :action => 'list' %>
