--- a/app/views/goldberg/content_pages/new.rhtml
+++ b/app/views/goldberg/content_pages/new.rhtml
@@ -1,8 +1,8 @@
 <h1>New Content Page</h1>
 
-<%= start_form_tag :action => 'create' %>
-  <%= render :partial => 'form' %>
+<% form_for :content_page, :url => {:action => 'create'} do |form| %>
+  <%= render :partial => 'form', :locals => {:form => form} %>
   <%= submit_tag "Create" %>
-<%= end_form_tag %>
+<% end %>
 
 <%= link_to 'Back', :action => 'list' %>
