--- a/app/views/goldberg/users/forgot_password.rhtml
+++ b/app/views/goldberg/users/forgot_password.rhtml
@@ -1,6 +1,6 @@
 <h1> Forgot Password </h1>
 
-<% if Goldberg.settings.self_reg_enabled -%>
+<% if Goldberg.settings.self_reg_send_confirmation_email -%>
 <p> If you've forgot your password, please fill in your userid and
 email address below and we'll send you an email with further
 instructions.</p>
@@ -23,5 +23,5 @@ be the one you used when you registered for the site.</em></p>
   <%= submit_tag 'Submit' %>
 <% end -%>
 <% else -%>
-<p> Please contact the System Administrator. </p>
+<p> Please contact the System Administrator for assistance. </p>
 <% end -%>
