--- a/app/views/goldberg/users/show.rhtml
+++ b/app/views/goldberg/users/show.rhtml
@@ -23,7 +23,7 @@
 <p><%= link_to 'Edit', :action => (@self_reg ? 'self_edit' : 'edit'), :id => @user %> 
 <% if not @self_reg -%>
 | <%= link_to 'Delete', {:action => 'destroy', :id => @user}, 
-    :confirm => 'Delete this user?', :post => true %> </p>
+    :confirm => 'Delete this user?', :method => 'post' %> </p>
 
 <p><%= link_to 'Back', :action => 'list' %> to Users list</p>
 <% end -%>
