Modified goldberg:upgrade Rake task to assist with the 0.1 to 0.2 transition.  Added start paths (the path to which the user is redirected on login).  Changed the way users are directed directed back to new or edit when registering or updating their details, depending on whether self-registration or delegate-registration is being used.
git-svn-id: svn+ssh://rubyforge.org/var/svn/goldberg/trunk/goldberg/templates/vendor/plugins/goldberg@82 2112df0d-361b-0410-855b-e9e795e2bf81

--- a/app/views/goldberg/roles/show.rhtml
+++ b/app/views/goldberg/roles/show.rhtml
@@ -4,6 +4,7 @@
 <tr><th>Description</th><td> <%= @role.description %></td></tr>
 <tr><th>Created At</th><td> <%= @role.created_at %></td></tr>
 <tr><th>Updated At</th><td> <%= @role.updated_at %></td></tr>
+<tr><th>Start Path</th><td> <%= @role.start_path %></td></tr>
 </table>
 
 <hr />
