--- a/app/views/goldberg/system_settings/_form.rhtml
+++ b/app/views/goldberg/system_settings/_form.rhtml
@@ -44,6 +44,9 @@ Denied Page </label><br/>
 <p><label for="site_url_prefix">Site URL prefix</label><br/>
 <%= text_field 'system_settings', 'site_url_prefix'  %></p>
 
+<p><label for="start_path">Default Start Path</label><br/>
+<%= text_field 'system_settings', 'start_path'  %></p>
+
 <p><label for="self_reg_enabled"> Self-registration Enabled </label><br/>
 <%= check_box 'system_settings', 'self_reg_enabled'  %></p>
 
