--- a/app/views/goldberg/roles/_form.rhtml
+++ b/app/views/goldberg/roles/_form.rhtml
@@ -2,7 +2,7 @@
 
 <!--[form:role]-->
 <p><label for="role_name">Name</label><br/>
-<%= text_field 'role', 'name'  %></p>
+<%= text_field 'role', 'name' %></p>
 
 <p><label for="role_parent_id">Based on the role</label><br/>
 <%= collection_select :role, :parent_id, @other_roles, :id, :name %>
@@ -11,6 +11,8 @@
 <p><label for="role_description">Description</label><br/>
 <%= text_area 'role', 'description', :rows => 3 %> </p>
 
+<p><label for="start_path">Start Path</label><br/>
+<%= text_field 'role', 'start_path' %> </p>
 
 <!--[eoform:role]-->
 
