--- a/app/views/goldberg/users/show.rhtml
+++ b/app/views/goldberg/users/show.rhtml
@@ -15,6 +15,10 @@
 <td><%= link_to @role.name, :controller => 'roles',
         :action => 'show', :id => @role.id %></td>
 </tr>
+
+<tr><th>Start Path:</th>
+<td> <%= h @user.start_path %></td>
+</tr>
 <% end -%>
 
 </table>
