Fixed a couple of flaws in the self-registration interface.
git-svn-id: svn+ssh://rubyforge.org/var/svn/goldberg/trunk/goldberg/templates/vendor/plugins/goldberg@92 2112df0d-361b-0410-855b-e9e795e2bf81

--- a/app/views/goldberg/users/_form.rhtml
+++ b/app/views/goldberg/users/_form.rhtml
@@ -24,6 +24,10 @@
 </tr>
 
 <tr>
+<th> Registration Confirmation <br />Required </th>
+<td><%= check_box 'user', 'self_reg_confirmation_required' %></td>
+
+<tr>
 <th> Start Path </th>
 <td><%= text_field 'user', 'start_path' %></td>
 </tr>
