Fixed bug that was making it difficult to add namespaced controllers; updated gemspec for 0.2.1 release; removed the last version's goldberg:upgrade rake task; updated the README for 0.2.1 release.
git-svn-id: svn+ssh://rubyforge.org/var/svn/goldberg/trunk/goldberg/templates/vendor/plugins/goldberg@93 2112df0d-361b-0410-855b-e9e795e2bf81

--- a/app/views/goldberg/site_controllers/list.rhtml
+++ b/app/views/goldberg/site_controllers/list.rhtml
@@ -41,7 +41,7 @@
 classes, but they have not yet been set up in Goldberg:</p></div>
 <ul>
 <% for name in @unknown.keys do -%>
-<li> <%= link_to name, :action => 'new_called', :id => name %> </li>
+<li> <%= link_to name, :action => 'new_called', :id => name.gsub(/\//, '%2F') %> </li>
 <% end -%>
 </ul>
 </div>
