Re-arranged Goldberg's standard libraries into the Goldberg:: namespace.  Removed the test fixtures directory: this has been obsoleted by Goldberg's bootstrap-based test fixtures.  Addressed outstanding bugs.  Updated the gemspec for the 0.2.2 release.

--- a/app/views/goldberg/menu_items/_form.rhtml
+++ b/app/views/goldberg/menu_items/_form.rhtml
@@ -13,7 +13,7 @@
 <td><%= collection_select 'menu_item', 'controller_action_id',
           @actions, :id, :fullname %></td>
 <td>OR <%= collection_select 'menu_item', 'content_page_id',
-          @pages, :id, :name %></td>
+          @pages, :id, :fullname %></td>
 </tr>
 
 <% if @can_change_parent -%>
